# Desktop_Mate

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.nodejs  Dockerfile.python
docs/: project-structure.md  system-engineer-design.md
src/main/: index.ts  preload.ts
src/main/ipc/: handlers.ts
src/main/services/: agent.ts  chunker.ts  embeddings.ts  file-processor.ts  file-system.ts  guardian.ts  llm.ts  ocr.ts  rag.ts  tools.ts  vector-store.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/components/: ChatInput.css  ChatInput.tsx  MessageList.css  MessageList.tsx  ModelSelector.css  ModelSelector.tsx  PermissionDialog.css  PermissionDialog.tsx  WorkspaceSelector.css  WorkspaceSelector.tsx
src/renderer/styles/: App.css  globals.css
src/rust/: Cargo.toml
src/rust/src/: file_indexer.rs  lib.rs
src/shared/types/: index.ts
tests/: README.md  setup.ts
tests/mocks/: fs.mock.ts  llm.mock.ts
tests/security/: api-key-leakage.test.ts  sandbox-escape.test.ts  scan-for-secrets.ts
tests/unit/services/: file-system.test.ts  guardian.test.ts  llm.test.ts
